--- a/hk.html
+++ b/hk.html
@@ -621,7 +621,7 @@ h3 {
         <button id="disconnectWallet" onclick="disconnectWallet()" style="display:none;">Disconnect</button></center>
         <p id="walletAddress" style="display:none; color: #ad5cff"></p>
         <p id="walletBalance" style="display:none; color: #00ca09;">Balance: 0 ETH</p>
-
+        <hr style="background-color: #333333; height: 1px; border: none;">
         <h2>Place Bet</h2>
 <h6 class="blinking-text">Always use slippage to save transaction gas fees</h6><br>
 
