--- a/hk.html
+++ b/hk.html
@@ -188,7 +188,7 @@ th, td {
 }
 
 th {
-    background: linear-gradient(135deg, rgba(245, 245, 220, 0.3), rgba(255, 255, 255, 0.1));
+    background: linear-gradient(90deg, #03a9f4, #f441a5);
     color: white;
 }
         
