--- a/hk.html
+++ b/hk.html
@@ -624,7 +624,7 @@ h3 {
         <center><button id="connectWallet" onclick="connectWallet()">Connect Wallet</button>
         <button id="disconnectWallet" onclick="disconnectWallet()" style="display:none;">Disconnect</button></center>
         <p id="walletAddress" style="display:none; color: #ad5cff"></p>
-        <p id="walletBalance" style="display:none; color: #00ca09;">Balance: 0 ETH</p>
+        <p id="walletBalance" style="display:none; color: #00ca09;">Balance: 0 ETH</p><br>
         <hr style="background-color: #333333; height: 1px; border: none;">
         <h2>Place Bet</h2>
         <h6 class="blinking-text">Always use slippage to save transaction gas fees</h6><br>
@@ -632,13 +632,6 @@ h3 {
         <input type="number" id="betTimes" placeholder="x1 / x99" min="1" max="99" oninput="validateBetTimes(); updateBetPrice()">
         <p id="betWarning" style="color: red;"></p>
         <p id="betPrice" style="color: #00FF66; font-weight: bold;">Cost: 0.000000 ETH</p>
-        <label for="gasFee">Transaction Speed:</label>
-<select id="gasFee" onchange="updateGasFeeDisplay()">
-    <option value="slow">Slow (Cheap)</option>
-    <option value="market" selected>Market (Balanced)</option>
-    <option value="fast">Fast (Expensive)</option>
-</select>
-<p id="gasFeeEstimate">Estimated Fee: Calculating...</p>
         <button onclick="placeBet()">Place Bet</button>
         <p id="betStatus"></p>
        <br>
@@ -1014,16 +1007,33 @@ async function placeBet() {
         return;
     }
     
-try {
+async function placeBet() {
+    try {
+        // Menampilkan status transaksi sedang berlangsung
+        document.getElementById("betStatus").innerHTML = `
+            <img src="loading.png" width="20" height="20" style="vertical-align: middle;">
+            <span style="color: #aaffaa;">Transaksi sedang berlangsung...</span>
+        `;
+
         await contract.methods.placeBet(number, times, true).send({
             from: userAccount,
             value: totalCost
         });
-        document.getElementById("betStatus").innerText = "Bet placed successfully!";
+
+        // Jika sukses
+        document.getElementById("betStatus").innerHTML = `
+            <img src="success.png" width="20" height="20" style="vertical-align: middle;">
+            <span style="color: #00cc00;">Bet placed successfully!</span>
+        `;
         loadUserBets();
     } catch (error) {
         console.error(error);
-        document.getElementById("betStatus").innerText = "Transaction failed!";
+
+        // Jika gagal
+        document.getElementById("betStatus").innerHTML = `
+            <img src="failed.png" width="20" height="20" style="vertical-align: middle;">
+            <span style="color: #ff3333;">Transaction failed!</span>
+        `;
     }
 }
 
@@ -1247,69 +1257,6 @@ window.onload = () => {
         });
     }
 };
-    </script>
-
-    <script>
-async function updateGasFeeDisplay() {
-    const gasFees = await getGasFeeHistory();
-    const ethPrice = await getEthPrice(); // Ambil harga ETH real-time
-    if (!gasFees || !ethPrice) return;
-
-    let gasOption = document.getElementById("gasFee").value;
-    let gasPrice = gasFees[gasOption];
-
-    // Konversi ke ETH (Gas Price (Gwei) * Gas Limit (misal 21000) / 1e9)
-    let gasLimit = 21000;
-    let gasCostEth = (gasPrice * gasLimit) / 1e9;
-    let gasCostUsd = (gasCostEth * ethPrice).toFixed(2); // Konversi ke USD
-
-    document.getElementById("gasFeeEstimate").innerText = `Estimated Fee: ${gasCostEth.toFixed(6)} ETH (~$${gasCostUsd}) (${gasPrice.toFixed(2)} Gwei)`;
-}
-
-// Panggil saat halaman load
-window.addEventListener("load", updateGasFeeDisplay);
-
-async function getGasFeeHistory() {
-    if (!window.ethereum) {
-        console.error("MetaMask not detected");
-        return null;
-    }
-
-    try {
-        const feeHistory = await window.ethereum.request({
-            method: "eth_feeHistory",
-            params: [5, "latest", [25, 50, 90]], // Blok terakhir & percentiles (slow, market, fast)
-        });
-
-        if (!feeHistory || !feeHistory.baseFeePerGas || !feeHistory.reward) {
-            console.error("Invalid response from MetaMask");
-            return null;
-        }
-
-        const baseFee = parseInt(feeHistory.baseFeePerGas[feeHistory.baseFeePerGas.length - 1], 16) / 1e9;
-        const slow = (feeHistory.reward[0][0] ? parseInt(feeHistory.reward[0][0], 16) / 1e9 : 0) + baseFee;
-        const market = (feeHistory.reward[0][1] ? parseInt(feeHistory.reward[0][1], 16) / 1e9 : 0) + baseFee;
-        const fast = (feeHistory.reward[0][2] ? parseInt(feeHistory.reward[0][2], 16) / 1e9 : 0) + baseFee;
-
-        console.log(`Slow: ${slow} Gwei, Market: ${market} Gwei, Fast: ${fast} Gwei`);
-        return { slow, market, fast };
-    } catch (error) {
-        console.error("Error fetching gas fee history:", error);
-        return null;
-    }
-}
-
-// Fungsi untuk mengambil harga ETH real-time dari CoinGecko
-async function getEthPrice() {
-    try {
-        const response = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=usd");
-        const data = await response.json();
-        return data.ethereum.usd;
-    } catch (error) {
-        console.error("Error fetching ETH price:", error);
-        return null;
-    }
-}
     </script>
        
 </body>
