--- a/hk.html
+++ b/hk.html
@@ -437,8 +437,8 @@ footer {
 .menu-table td {
     padding: 10px;
     text-align: left;
-    color: white;
-    font-size: 16px;
+    color: #00ca09;
+    font-size: 14px;
 }
 
 /* Icons */
@@ -1007,7 +1007,6 @@ async function placeBet() {
         return;
     }
     
-async function placeBet() {
     try {
         // Menampilkan status transaksi sedang berlangsung
         document.getElementById("betStatus").innerHTML = `
