--- a/hk.html
+++ b/hk.html
@@ -657,18 +657,18 @@ h3 {
                 </tr>
                 <tr>
                     <td style="color: orange; font-weight: bold;">4D</td>
-                    <td style="color: green; font-weight: bold;">50,000%</td>
-                    <td style="color: blue; font-weight: bold;">0.0875 ETH</td>
+                    <td style="color: #00ca09; font-weight: bold;">50,000%</td>
+                    <td style="color: #1a88ff; font-weight: bold;">0.0875 ETH</td>
                 </tr>
                 <tr>
                     <td style="color: orange; font-weight: bold;">3D</td>
-                    <td style="color: green; font-weight: bold;">5,000%</td>
-                    <td style="color: blue; font-weight: bold;">0.00875 ETH</td>
+                    <td style="color: #00ca09; font-weight: bold;">5,000%</td>
+                    <td style="color: #1a88ff; font-weight: bold;">0.00875 ETH</td>
                 </tr>
                 <tr>
                     <td style="color: orange; font-weight: bold;">2D</td>
-                    <td style="color: green; font-weight: bold;">500%</td>
-                    <td style="color: blue; font-weight: bold;">0.000875 ETH</td>
+                    <td style="color: #00ca09; font-weight: bold;">500%</td>
+                    <td style="color: #1a88ff; font-weight: bold;">0.000875 ETH</td>
                 </tr>
             </table>
         </div>
@@ -1008,7 +1008,8 @@ async function placeBet() {
     }
     
     try {
-        // Menampilkan status transaksi      document.getElementById("betStatus").innerHTML = `
+        // Menampilkan status transaksi      
+        document.getElementById("betStatus").innerHTML = `
             <img src="loading.png" width="20" height="20" style="vertical-align: middle;">
             <span style="color: #aaffaa; font-size: 12px;">Transaction in progress...</span>
         `;
