--- a/hk.html
+++ b/hk.html
@@ -1150,20 +1150,23 @@ async function loadBetHistory() {
         let shortPlayer = bet.player.slice(0, 10) + "..." + bet.player.slice(-10);
         let shortTxHash = bet.txHash.slice(0, 10) + "..." + bet.txHash.slice(-10);
 
-       html += `<p>Player: <span style="color: #ad5cff;">${shortPlayer}</span><br>
-            BetID: <span style="color: #b37500; font-size: 8px;">${bet.betId}</span><br>
-            BetNumber: <span style="color: #00FF66;">${bet.number}</span><br>
-            BetAmount: <span style="color: #00FF66;">${bet.betAmount}</span><br>
-            Tx: <span style="color: #fe6666;">${shortTxHash}</span><br>
-            Block: <a href="https://basescan.io/block/${bet.blockNumber}" target="_blank" style="color: #1a88ff;">${bet.blockNumber}</a><br>
-            Time: <span style="color: orange;">${new Date(bet.timestamp * 1000).toISOString()} UTC</span><br>
-            <button onclick="likeBet('${bet.betId}')">
-                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffcc00" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                </svg>
-            </button> 
-            <span id="like-count-${bet.betId}" style="color: #ffcc00; font-weight: bold;">0</span> likes
-        </p><hr style="background-color: #333333; height: 1px; border: none;">`; 
+       html += `<p>
+    Player: <span style="color: #ad5cff;">${shortPlayer}</span><br>
+    BetID: <span style="color: #b37500; font-size: 8px;">${bet.betId}</span><br>
+    BetNumber: <span style="color: #00FF66;">${bet.number}</span><br>
+    BetAmount: <span style="color: #00FF66;">${bet.betAmount}</span><br>
+    Tx: <span style="color: #fe6666;">${shortTxHash}</span><br>
+    Block: <a href="https://basescan.io/block/${bet.blockNumber}" target="_blank" style="color: #1a88ff;">${bet.blockNumber}</a><br>
+    Time: <span style="color: orange;">${new Date(bet.timestamp * 1000).toISOString()} UTC</span><br>
+
+    <button id="like-button-${bet.betId}" onclick="likeBet('${bet.betId}')">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffcc00" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+        </svg> Like
+    </button> 
+    <span id="like-count-${bet.betId}" style="color: #ffcc00; font-weight: bold;">0</span> likes
+</p>
+<hr style="background-color: #333333; height: 1px; border: none;">`; 
         
     }
     document.getElementById("betHistory").innerHTML = html;
@@ -1195,28 +1198,56 @@ async function getLikeCount(betId) {
     }
 }
 
-async function likeBet(betId) {
+async function hasUserLiked(betId) {
     try {
-        await contract.methods.likeBet(betId).send({ from: userAccount });
-        alert("Liked successfully!");
-
-        // Perbarui jumlah like setelah like sukses
-        getLikeCount(betId);
+        return await contract.methods.hasLiked(betId, userAccount).call();
     } catch (error) {
-        console.error(error);
-        alert("Failed to like the bet.");
+        console.error("Failed to check if user liked:", error);
+        return false;
     }
 }
 
-// Fungsi untuk memperbarui riwayat ketika Ball 1 diperbarui
-document.addEventListener("DOMContentLoaded", function() {
-    let ball1 = document.querySelector(".lottery-table td:first-child");
+async function likeBet(betId) {
+    try {
+        const userHasLiked = await hasUserLiked(betId);
 
-    ball1.addEventListener("input", function() {
-        updateHistory(ball1.innerText.trim());
-    });
-});
+        if (userHasLiked) {
+            // Jika sudah like, maka lakukan dislike
+            await contract.methods.dislikeBet(betId).send({ from: userAccount });
+            alert("Disliked successfully!");
+        } else {
+            // Jika belum like, maka lakukan like
+            await contract.methods.likeBet(betId).send({ from: userAccount });
+            alert("Liked successfully!");
+        }
 
+        // Perbarui jumlah like dan tombol setelah aksi berhasil
+        updateLikeUI(betId);
+    } catch (error) {
+        console.error(error);
+        alert("Failed to like/dislike the bet.");
+    }
+}
+
+async function updateLikeUI(betId) {
+    await getLikeCount(betId);
+    const userHasLiked = await hasUserLiked(betId);
+    const buttonElement = document.getElementById(`like-button-${betId}`);
+
+    if (buttonElement) {
+        if (userHasLiked) {
+            buttonElement.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ff0000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg> Dislike`;
+        } else {
+            buttonElement.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffcc00" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg> Like`;
+        }
+    }
+}
+
+// Modal Result
 function updateHistory(newBall1) {
     let historyTable = document.getElementById("historyBody");
     let rows = historyTable.getElementsByTagName("tr");
