--- a/hk2.html
+++ b/hk2.html
@@ -732,22 +732,29 @@ async function loadBetHistory() {
     const start = betHistoryPage * pageSize;
     const end = Math.min(start + pageSize, reversedBets.length);
 
-    let html = "";
-    for (let i = start; i < end; i++) {
-        let bet = reversedBets[i];
-        let shortPlayer = bet.player.slice(0, 10) + "..." + bet.player.slice(-10);
-        let shortTxHash = bet.txHash.slice(0, 10) + "..." + bet.txHash.slice(-10);
-
-        html += `<p>
+    let html = "<p>
     Player: <span style="color: #ad5cff;">${shortPlayer}</span><br>
+    BetID: <span style="color: #b37500; font-size: 8px;">${bet.betId}</span><br>
     BetNumber: <span style="color: #00FF66;">${bet.number}</span><br>
     BetAmount: <span style="color: #00FF66;">${bet.betAmount}</span><br>
     Tx: <span style="color: #fe6666;">${shortTxHash}</span><br>
     Block: <a href="https://basescan.io/block/${bet.blockNumber}" target="_blank" style="color: #1a88ff;">${bet.blockNumber}</a><br>
     Time: <span style="color: orange;">${new Date(bet.timestamp * 1000).toISOString()} UTC</span><br>
+
+    <button id="like-button-${bet.betId}" onclick="likeBet('${bet.betId}')">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffcc00" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+        </svg> Like
+    </button> 
+    <span id="like-count-${bet.betId}" style="color: #ffcc00; font-weight: bold;">0</span> likes
 </p>
-<button onclick="openCommentModal('${bet.betId}')">(0)Komentar</button>
-<hr style="background-color: #333333; height: 1px; border: none;">`;
+<hr style="background-color: #333333; height: 1px; border: none;">";
+    for (let i = start; i < end; i++) {
+        let bet = reversedBets[i];
+        let shortPlayer = bet.player.slice(0, 10) + "..." + bet.player.slice(-10);
+        let shortTxHash = bet.txHash.slice(0, 10) + "..." + bet.txHash.slice(-10);
+
+        html += ``;
     }
     document.getElementById("betHistory").innerHTML = html;
 }
@@ -765,85 +772,68 @@ function nextBetHistory() {
     loadBetHistory();
 }
 
-// Comment Script
-async function getComments(betId, startIndex = 0, count = 10) {
+// Like Script
+async function getLikeCount(betId) {
     try {
-        const comments = await contract.methods.getComments(betId).call();
-        const commentSection = document.getElementById(`comment-section-${betId}`);
-
-        // Bersihkan tampilan sebelum menampilkan komentar baru
-        commentSection.innerHTML = "";
-
-        // Lazy load komentar (ambil sebagian saja)
-        const displayedComments = comments.slice(startIndex, startIndex + count);
-
-        displayedComments.forEach((comment, index) => {
-            if (!comment.isDeleted) {
-                const commentElement = document.createElement("div");
-                commentElement.innerHTML = `
-                    <p><strong>${comment.commenter}</strong>: ${comment.text}</p>
-                    <small>${new Date(comment.timestamp * 1000).toISOString()}</small>
-                    <button onclick="editComment('${betId}', ${index}, '${comment.text}')">Edit</button>
-                    <button onclick="deleteComment('${betId}', ${index})">Delete</button>
-                    <hr>
-                `;
-                commentSection.appendChild(commentElement);
-            }
-        });
-
-        // Tombol untuk memuat lebih banyak komentar
-        if (comments.length > startIndex + count) {
-            const loadMoreBtn = document.createElement("button");
-            loadMoreBtn.innerText = "Load More";
-            loadMoreBtn.onclick = () => getComments(betId, startIndex + count, count);
-            commentSection.appendChild(loadMoreBtn);
+        const likeCount = await contract.methods.getLikeCount(betId).call();
+        const likeElement = document.getElementById(`like-count-${betId}`);
+        if (likeElement) {
+            likeElement.innerText = likeCount;
         }
     } catch (error) {
-        console.error("Failed to fetch comments:", error);
+        console.error("Failed to fetch like count:", error);
     }
 }
 
-async function addComment(betId) {
-    const commentText = document.getElementById(`comment-input-${betId}`).value;
-    if (!commentText) {
-        alert("Comment cannot be empty!");
-        return;
-    }
-
+async function hasUserLiked(betId) {
     try {
-        await contract.methods.addComment(betId, commentText).send({ from: userAccount });
-        alert("Comment added successfully!");
-        getComments(betId); // Perbarui daftar komentar setelah menambah
+        return await contract.methods.hasLiked(betId, userAccount).call();
     } catch (error) {
-        console.error("Failed to add comment:", error);
+        console.error("Failed to check if user liked:", error);
+        return false;
     }
 }
 
-async function editComment(betId, commentIndex, oldText) {
-    const newComment = prompt("Edit your comment:", oldText);
-    if (!newComment) return;
-
+async function likeBet(betId) {
     try {
-        await contract.methods.editComment(betId, commentIndex, newComment).send({ from: userAccount });
-        alert("Comment updated!");
-        getComments(betId); // Perbarui daftar komentar setelah edit
+        const userHasLiked = await hasUserLiked(betId);
+
+        if (userHasLiked) {
+            // Jika sudah like, maka lakukan dislike
+            await contract.methods.dislikeBet(betId).send({ from: userAccount });
+            alert("Disliked successfully!");
+        } else {
+            // Jika belum like, maka lakukan like
+            await contract.methods.likeBet(betId).send({ from: userAccount });
+            alert("Liked successfully!");
+        }
+
+        // Perbarui jumlah like dan tombol setelah aksi berhasil
+        updateLikeUI(betId);
     } catch (error) {
-        console.error("Failed to edit comment:", error);
+        console.error(error);
+        alert("Failed to like/dislike the bet.");
     }
 }
 
-async function deleteComment(betId, commentIndex) {
-    if (!confirm("Are you sure you want to delete this comment?")) return;
+async function updateLikeUI(betId) {
+    await getLikeCount(betId);
+    const userHasLiked = await hasUserLiked(betId);
+    const buttonElement = document.getElementById(`like-button-${betId}`);
 
-    try {
-        await contract.methods.deleteComment(betId, commentIndex).send({ from: userAccount });
-        alert("Comment deleted!");
-        getComments(betId); // Perbarui daftar komentar setelah hapus
-    } catch (error) {
-        console.error("Failed to delete comment:", error);
+    if (buttonElement) {
+        if (userHasLiked) {
+            buttonElement.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ff0000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg> Dislike`;
+        } else {
+            buttonElement.innerHTML = `<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffcc00" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+            </svg> Like`;
+        }
     }
-}
-
+    }
+        
 function openCommentModal(betId) {
     document.getElementById("comment-modal").style.display = "block";
     getComments(betId);
